--- a/app/LandmarkCIty/app/src/main/res/layout/row_user_feeds.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/row_user_feeds.xml
@@ -4,8 +4,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardPost"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/dp2"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     app:cardCornerRadius="1dp"
