--- a/app/LandmarkCIty/app/src/main/res/layout/activity_main.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,8 @@
         app:layout_constraintHorizontal_bias="0.501"
         android:onClick="download"/>
 
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </android.support.constraint.ConstraintLayout>
