--- a/app/LandmarkCIty/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/activity_user_dashboard.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/white"
+                android:background="@color/another_white"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:titleTextColor="#212121">
 
