--- a/app/LandmarkCIty/app/src/main/res/values/colors.xml
+++ b/app/LandmarkCIty/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="another_white">#F2F2F2</color>
     <color name="black">#000000</color>
     <color name="border_color">#d4d4d4</color>
     <color name="text_hint">#dbdbdb</color>
