--- a/app/LandmarkCIty/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/activity_reset_password.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:background="@drawable/background">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -99,26 +97,107 @@
 
             </LinearLayout>
 
+            <RelativeLayout
+                android:id="@+id/relativePassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/relativeLogin"
+                android:layout_marginTop="@dimen/dp20"
+                android:background="@drawable/edit_text_background"
+                android:padding="@dimen/dp2">
+
+                <ImageView
+                    android:id="@+id/ivPass"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentLeft="true"
+                    android:padding="@dimen/dp4"
+                    android:src="@drawable/password" />
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="1dp"
+                    android:layout_height="25dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dp8"
+                    android:layout_marginRight="@dimen/dp8"
+                    android:layout_toRightOf="@+id/ivPass"
+                    android:background="@color/border_color" />
+
+                <EditText
+                    android:id="@+id/editPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/view2"
+                    android:background="@android:color/transparent"
+                    android:hint="New Password"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:textColorHint="@color/text_hint"
+                    android:textSize="@dimen/font_14" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/relativePassword2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/relativePassword"
+                android:layout_marginTop="@dimen/dp20"
+                android:background="@drawable/edit_text_background"
+                android:padding="@dimen/dp2">
+
+                <ImageView
+                    android:id="@+id/ivPass2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentLeft="true"
+                    android:padding="@dimen/dp4"
+                    android:src="@drawable/password" />
+
+                <View
+                    android:id="@+id/view22"
+                    android:layout_width="1dp"
+                    android:layout_height="25dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dp8"
+                    android:layout_marginRight="@dimen/dp8"
+                    android:layout_toRightOf="@+id/ivPass2"
+                    android:background="@color/border_color" />
+
+                <EditText
+                    android:id="@+id/editPassword2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/view22"
+                    android:background="@android:color/transparent"
+                    android:hint="Confirm new password"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:textColorHint="@color/text_hint"
+                    android:textSize="@dimen/font_14" />
+            </RelativeLayout>
+
             <Button
-                android:id="@+id/btnVerify"
+                android:id="@+id/btnReset"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp36"
-                android:layout_below="@+id/relativeLogin"
+                android:layout_below="@+id/relativePassword2"
                 android:layout_marginTop="@dimen/dp16"
                 android:background="@color/btn_background"
-                android:text="Verify"
+                android:text="Reset"
                 android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/tvResend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/btnVerify"
-                android:layout_centerHorizontal="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/btnReset"
                 android:layout_marginTop="@dimen/dp12"
                 android:text="Resend"
                 android:textSize="@dimen/font_16" />
-
 
         </RelativeLayout>
     </ScrollView>
