--- a/app/LandmarkCIty/app/src/main/res/layout/content_forgot_password.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/content_forgot_password.xml
@@ -62,6 +62,7 @@
                     android:layout_toRightOf="@+id/view1"
                     android:background="@android:color/transparent"
                     android:hint="@string/hint_user_name"
+                    android:singleLine="true"
                     android:textColorHint="@color/text_hint"
                     android:textSize="@dimen/font_14" />
             </RelativeLayout>
