--- a/app/LandmarkCIty/app/src/main/res/layout/row_news.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/row_news.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground"
-    android:clickable="true"
     app:cardCornerRadius="1dp"
-    app:elevation="2dp"
+    app:elevation="3dp"
+    app:cardUseCompatPadding="true"
     android:id="@+id/cardPost">
 
     <RelativeLayout
@@ -84,7 +83,8 @@
                 android:textColor="@color/text_light"
                 android:textSize="@dimen/font_12"
                 android:layout_alignParentRight="true"
-                tools:text="Times now" />
+                tools:text="Times now"
+                android:padding="@dimen/dp4"/>
         </RelativeLayout>
 
 
