--- a/app/LandmarkCIty/app/src/main/res/layout/row_updates.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/row_updates.xml
@@ -2,12 +2,12 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardPost"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground"
-    android:clickable="true"
     app:cardCornerRadius="1dp"
-    app:elevation="2dp">
+    app:cardUseCompatPadding="true"
+    app:elevation="3dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -26,17 +26,19 @@
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            tools:src="@drawable/video_icon"
-            android:padding="@dimen/dp2"/>
+            android:padding="@dimen/dp2"
+            android:visibility="gone"
+            tools:src="@drawable/video_icon" />
 
         <in.squareiapp.landmarkcity.custom_views.AppTextView
+            android:id="@+id/tvUpdateTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/dp8"
             android:layout_marginLeft="@dimen/dp8"
             android:maxLines="1"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="@dimen/font_16"
             android:textStyle="bold|italic"
             tools:text="Landmark city, kota" />
