--- a/app/LandmarkCIty/app/src/main/res/layout/row_user_feeds.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/row_user_feeds.xml
@@ -9,7 +9,7 @@
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
-    app:cardCornerRadius="2dp"
+    app:cardCornerRadius="1dp"
     app:cardUseCompatPadding="true"
     app:elevation="3dp">
 
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/dp8">
 
-            <com.mikhaellopez.circularimageview.CircularImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/ivProfile"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
