--- a/app/LandmarkCIty/app/src/main/res/values/dimens.xml
+++ b/app/LandmarkCIty/app/src/main/res/values/dimens.xml
@@ -27,4 +27,6 @@
 
     <dimen name="logo_width">280dp</dimen>
     <dimen name="logo_height">165dp</dimen>
+    <dimen name="dp6">6dp</dimen>
+    <dimen name="dp10">10dp</dimen>
 </resources>
