--- a/app/LandmarkCIty/app/src/main/res/layout/row_updates.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/row_updates.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="180dp">
 
+
         <ImageView
             android:id="@+id/ivUpdateImage"
             android:layout_width="match_parent"
@@ -28,7 +29,7 @@
             android:layout_centerVertical="true"
             android:padding="@dimen/dp2"
             android:visibility="gone"
-            tools:src="@drawable/video_icon" />
+            android:src="@drawable/video_icon" />
 
         <in.squareiapp.landmarkcity.custom_views.AppTextView
             android:id="@+id/tvUpdateTitle"
@@ -42,6 +43,10 @@
             android:textSize="@dimen/font_16"
             android:textStyle="bold|italic"
             tools:text="Landmark city, kota" />
-
+        <View
+            android:layout_width="3dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:background="@color/colorPrimaryDark"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
