--- a/app/LandmarkCIty/app/src/main/res/layout/activity_store.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/activity_store.xml
@@ -5,7 +5,6 @@
     android:id="@+id/baseCoordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context="in.squareiapp.landmarkcity.activities.featuresactivities.StoreActivity">
@@ -25,5 +24,15 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+    </RelativeLayout>
 
 </LinearLayout>
