--- a/app/LandmarkCIty/app/src/main/res/layout/row_store_suggestion.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/row_store_suggestion.xml
@@ -3,22 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardPost"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:cardCornerRadius="1dp"
-    app:cardUseCompatPadding="true"
     app:elevation="3dp">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dp4"
-        android:paddingTop="@dimen/dp4">
+        android:padding="@dimen/dp8">
 
         <ImageView
             android:id="@+id/ivNewsImage"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/dp4"
             android:scaleType="fitXY"
@@ -30,11 +28,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/ivNewsImage"
             android:layout_centerHorizontal="true"
-            android:layout_margin="@dimen/dp8"
+            android:layout_margin="@dimen/dp4"
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/text_dark_dark"
-            android:textSize="@dimen/font_16"
+            android:textSize="@dimen/font_12"
             tools:text="Medicine" />
 
     </RelativeLayout>
