--- a/app/LandmarkCIty/app/src/main/res/layout/content_login_activity.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/content_login_activity.xml
@@ -141,7 +141,9 @@
                 android:layout_marginTop="@dimen/dp12"
                 android:text="@string/registerText"
                 android:textColor="@color/text_dark"
-                android:textSize="@dimen/font_14"></in.squareiapp.landmarkcity.custom_views.AppTextView>
+                android:textSize="@dimen/font_14">
+
+            </in.squareiapp.landmarkcity.custom_views.AppTextView>
 
             <in.squareiapp.landmarkcity.custom_views.AppTextView
                 android:id="@+id/textor"
@@ -152,7 +154,9 @@
                 android:layout_marginTop="@dimen/dp12"
                 android:text="or, sign in with"
                 android:textColor="@color/text_light"
-                android:textSize="@dimen/font_14"></in.squareiapp.landmarkcity.custom_views.AppTextView>
+                android:textSize="@dimen/font_14">
+
+            </in.squareiapp.landmarkcity.custom_views.AppTextView>
 
             <LinearLayout
                 android:layout_width="wrap_content"
